# Requiem-Agent

./: .gitignore  .npmrc  Dockerfile  README.md  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
.replit-artifact/: artifact.toml
lib/api-client-react/: package.json  tsconfig.tsbuildinfo
monitoring/: grafana-alerts.json  grafana-dashboard.json
public/: 404.html
rust-backend/: Cargo.toml  Dockerfile
rust-backend/migrations/: 001_initial_schema.sql  002_rag_memory.sql  003_rate_limits_and_metrics.sql  004_user_preferences.sql  005_conversations.sql
rust-backend/prompts/: code_agent.md  debug_agent.md  research_agent.md  terminal_agent.md
rust-backend/src/: auth.rs  collaborative_agents.rs  crypto.rs  db.rs  db_pool.rs  error.rs  llm_providers.rs  llm_stream.rs  main.rs  memory_summarizer.rs  metrics.rs  migrate.rs  models.rs  openapi.rs  orchestrator.rs  path_safety.rs  plugins.rs  rag_memory.rs  rate_limit.rs  react_loop.rs  self_improvement.rs  storage.rs  webhooks.rs
rust-backend/src/agent/: identity_shield.rs  mod.rs
rust-backend/src/agent/anti_printer/: mod.rs  patterns.rs  pipeline.rs  router.rs  semantic.rs
rust-backend/src/agent/compiler/: auto_correct.rs  interpreter.rs  locks.rs  mod.rs  output.rs
rust-backend/src/agent/memory/: context_window.rs  embeddings.rs  mod.rs  rag.rs  session_memory.rs  vector_store.rs
rust-backend/src/agent/protocol/: mod.rs  mode.rs  sub_agent.rs  thinking.rs
rust-backend/src/agent/skills/: mod.rs
rust-backend/src/agent/synergy/: coordinator.rs  mod.rs  patterns.rs  smart_router.rs
rust-backend/src/agent/tasks/: mod.rs  scheduler.rs  tree.rs
rust-backend/src/agent/tools/: diff.rs  file_finder.rs  mod.rs  parser.rs  search.rs  vcs.rs  workspace.rs
rust-backend/src/agent/user_questions/: mod.rs
rust-backend/src/enforce/: audit.rs  locks.rs  mod.rs  scanner.rs
rust-backend/src/formats/: csv_fmt.rs  json_fmt.rs  markdown_fmt.rs  mod.rs  sql_fmt.rs  svg_charts.rs  toml_fmt.rs  yaml_fmt.rs
rust-backend/src/middleware/: request_logger.rs
rust-backend/src/routes/: agent_chat.rs  agent_env.rs  agent_protocol.rs  anti_printer.rs  auth.rs  bots.rs  enforce.rs  files.rs  formats.rs  identity_shield.rs  messages.rs  mod.rs  models.rs  preferences.rs  rag.rs  sandbox.rs  sessions.rs  strict_locks.rs  synergy.rs  tasks.rs  tools.rs  usage.rs  user_api_keys.rs  user_questions.rs  workspaces.rs  ws_agent.rs  ws_terminal.rs  zen.rs
rust-backend/src/sandbox/: executor.rs  landlock.rs  layer.rs  mod.rs  rlimit.rs  scheduler.rs  seccomp.rs  types.rs  user.rs  wasm.rs
rust-backend/src/storage/: workspace.rs
rust-backend/src/tools/: code_tools.rs  diff_tools.rs  mod.rs  parser_tools.rs  search_tools.rs  vcs_tools.rs
rust-backend/tests/: agent_chat_integration.rs  comprehensive_integration.rs  ws_streaming_e2e.rs
src/: App.tsx  index.css
(+35 files in other folders)
